force-app/main/default/objects/Claim_History__c.object
<CustomObject>
    <label>Claim History</label>
    <pluralLabel>Claim Histories</pluralLabel>

    <nameField>
        <label>History Name</label>
        <type>Text</type>
    </nameField>


    <!-- Legacy-style: audit logs are sensitive -->
    <sharingModel>Private</sharingModel>

    <!-- Claim__c (Lookup to Claim__c) -->
    <fields>
        <fullName>Claim__c</fullName>
        <label>Claim</label>
        <type>Lookup</type>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Claim History</relationshipLabel>
        <relationshipName>ClaimHistory</relationshipName>
        <required>true</required>
    </fields>

    <!-- Change_Type__c -->
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <required>true</required>
        <picklist>
            <picklistValues>
                <fullName>Status Change</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Amount Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
    </fields>

    <!-- Old_Status__c / New_Status__c -->
    <fields>
        <fullName>Old_Status__c</fullName>
        <label>Old Status</label>
        <type>Text</type>
        <length>50</length>
    </fields>

    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <type>Text</type>
        <length>50</length>
    </fields>

    <!-- Old_Value__c / New_Value__c (generic, for amount/notes updates) -->
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

    <!-- Changed_By__c (Lookup to User) -->
    <fields>
        <fullName>Changed_By__c</fullName>
        <label>Changed By</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Claim History Changes</relationshipLabel>
        <relationshipName>ClaimHistoryChanges</relationshipName>
    </fields>

    <!-- Changed_On__c -->
    <fields>
        <fullName>Changed_On__c</fullName>
        <label>Changed On</label>
        <type>DateTime</type>
        <required>true</required>
    </fields>

    <!-- Reason__c -->
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

</CustomObject>